--- a/pubman/pubman_logic_ear/src/test/resources/log4j.properties
+++ b/pubman/pubman_logic_ear/src/test/resources/log4j.properties
@@ -1,9 +1,9 @@
 # Set root category priority to DEBUG and set its only appender to CONSOLE
-log4j.rootLogger=DEBUG
+log4j.rootLogger=INFO
 
-log4j.logger.test=DEBUG, CONSOLE
+log4j.logger.test=INFO, CONSOLE
 log4j.additivity=false
-log4j.logger.de.mpg.escidoc=DEBUG, CONSOLE
+log4j.logger.de.mpg.escidoc=INFO, CONSOLE
 log4j.logger.org=ERROR
 log4j.logger.httpclient=ERROR
 
