--- a/common_services/syndication_presentation/pom.xml
+++ b/common_services/syndication_presentation/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.39-SNAPSHOT</version>
+		<version>1.0.39</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>syndication_presentation</artifactId>
 	<name>syndication_presentation</name>
-	<version>1.0.18-SNAPSHOT</version>
+	<version>1.0.18</version>
 	<packaging>war</packaging>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_presentation</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/common_services/syndication_presentation</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.39/syndication_presentation</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/common_services-1.0.39/syndication_presentation</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.39</url>
 	</scm>
 	<build>
 		<plugins>
@@ -70,13 +70,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.40-SNAPSHOT</version>
+			<version>1.0.40</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.37-SNAPSHOT</version>
+			<version>1.1.37</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
