--- a/common_services/exportmanager/pom.xml
+++ b/common_services/exportmanager/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.39</version>
+		<version>1.0.40-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>exportmanager</artifactId>
     <name>exportmanager</name>
 	<packaging>ejb</packaging>
-	<version>1.0.37</version>
+	<version>1.0.38-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.39/exportmanager</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.39/exportmanager</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.39</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/exportmanager</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/exportmanager</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -58,13 +58,13 @@
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.43</version>
+			<version>1.0.44-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.40</version>
+			<version>1.0.41-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.40</version>
+			<version>1.0.41-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>jetty</groupId>
