--- a/common_services/cone_ear/pom.xml
+++ b/common_services/cone_ear/pom.xml
@@ -3,19 +3,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.40-SNAPSHOT</version>
+		<version>1.0.40</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>cone_ear</artifactId>
 	<name>cone_ear</name>
 	<packaging>ear</packaging>
-	<version>1.1.4-SNAPSHOT</version>
+	<version>1.1.4</version>
 	
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/cone_ear</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/cone_ear</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40/cone_ear</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40/cone_ear</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40</url>
 	</scm>
 	
 	<build>
@@ -213,7 +213,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.38-SNAPSHOT</version>
+			<version>1.1.38</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
@@ -226,14 +226,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone_presentation</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>1.1.4</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.41-SNAPSHOT</version>
+			<version>1.0.41</version>
 			<scope>compile</scope>
 			<type>jar</type>
 		</dependency>
@@ -313,7 +313,7 @@
 	    <dependency>
 	    	<groupId>de.mpg.escidoc.services</groupId>
 	    	<artifactId>cone</artifactId>
-	    	<version>1.1.4-SNAPSHOT</version>
+	    	<version>1.1.4</version>
 	    	<scope>compile</scope>
 	    </dependency>
 	    <dependency>
