--- a/common_services/structuredexportmanager/pom.xml
+++ b/common_services/structuredexportmanager/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.40-SNAPSHOT</version>
+		<version>1.0.40</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
     <artifactId>structuredexportmanager</artifactId>
     <name>structuredexportmanager</name>
 	<packaging>ejb</packaging>
-	<version>1.0.41-SNAPSHOT</version>
+	<version>1.0.41</version>
 
 	<scm>
-      <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/structuredexportmanager</connection>
-      <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/structuredexportmanager</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+      <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40/structuredexportmanager</connection>
+      <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40/structuredexportmanager</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.40</url>
 	</scm>
 
 	<build>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.41-SNAPSHOT</version>
+			<version>1.0.41</version>
 			<scope>test</scope>
 		</dependency>	
 		<dependency>
@@ -133,7 +133,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.38-SNAPSHOT</version>
+			<version>1.1.38</version>
 			<type>ejb</type>
 		</dependency>
 <!--		<dependency>-->
