--- a/common_services/cone_presentation/pom.xml
+++ b/common_services/cone_presentation/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.40</version>
+		<version>1.0.41-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>cone_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>cone_presentation</name>
-	<version>1.1.4</version>
+	<version>1.1.5-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -86,13 +86,13 @@
 	    <dependency>
 	    	<groupId>de.mpg.escidoc.services</groupId>
 	    	<artifactId>cone</artifactId>
-	    	<version>1.1.4</version>
+	    	<version>1.1.5-SNAPSHOT</version>
 	    	<scope>provided</scope>
 	    </dependency>
 	    <dependency>
 	    	<groupId>de.mpg.escidoc.services</groupId>
 	    	<artifactId>common_logic</artifactId>
-	    	<version>1.1.38</version>
+	    	<version>1.1.39-SNAPSHOT</version>
 	    	<type>ejb</type>
 	    	<scope>provided</scope>
 	    </dependency>
