--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -375,13 +375,13 @@
                     <targetJdk>${jdk.version}</targetJdk>
                 </configuration>
             </plugin>
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <configuration>
                     <configLocation>http://escidoc1.escidoc.mpg.de/resources/checkstyle/checkstyle.xml</configLocation>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <!--                 JavaNCSS - A Source Measurement Suite for Java-->
                 <!--                    http://www.kclee.de/clemens/java/javancss/ -->
