--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -38,6 +38,8 @@ escidoc.pubman_presentation.email.withauthentication=${escidoc.pubman_presentati
 escidoc.pubman_presentation.email.authenticationuser=${escidoc.pubman_presentation.email.authenticationuser}
 escidoc.pubman_presentation.email.authenticationpwd=${escidoc.pubman_presentation.email.authenticationpwd}
 
+escidoc.pubman_presentation.viewFullItem.defaultSize=${escidoc.pubman_presentation.viewFullItem.defaultSize}
+
 # URL of this PubMan instance
 escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
 escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
