--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -566,6 +566,9 @@
 				
 				<escidoc.import.surveyor.interval>10</escidoc.import.surveyor.interval>
 				
+				<!-- Number of creator displayed on load of the view full item page, the rest is displayed through "more" button -->
+				<escidoc.pubman_presentation.viewFullItem.defaultSize>20</escidoc.pubman_presentation.viewFullItem.defaultSize>
+				
 				<!-- unAPI -->
 				<escidoc.unapi.download.server>http://localhost:8080/dataacquisition/download/unapi</escidoc.unapi.download.server>
 				<escidoc.unapi.view.server>http://localhost:8080/dataacquisition/view/unapi</escidoc.unapi.view.server>
@@ -798,6 +801,9 @@
 				<escidoc.import.task.content-model>escidoc:45001</escidoc.import.task.content-model>
 				
 				<escidoc.import.surveyor.interval>15</escidoc.import.surveyor.interval>
+				
+				<!-- Number of creator displayed on load of the view full item page, the rest is displayed through "more" button -->
+				<escidoc.pubman_presentation.viewFullItem.defaultSize>20</escidoc.pubman_presentation.viewFullItem.defaultSize>
 				
 				<!-- Sitemaps -->
 				<escidoc.pubman.sitemap.task.interval>1440</escidoc.pubman.sitemap.task.interval>
