Newest wagon version

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -320,7 +320,6 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-webdav</artifactId>
-                <version>1.0-beta-2</version>
             </extension>
         </extensions>
     </build>
@@ -407,6 +406,7 @@
     <!-- properties valid for all profiles -->
     <properties>
         <organization.logo>http://www.mpdl.mpg.de/mpdl/sys/css/screen/images/logo.gif</organization.logo>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <profiles>
