--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -415,6 +415,7 @@
 	<!-- properties valid for all profiles -->
 	<properties>
 		<organization.logo>http://www.mpdl.mpg.de/mpdl/sys/css/screen/images/logo.gif</organization.logo>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<profiles>
