--- a/common_services/pid_cache_ear/src/test/resources/pubman.properties
+++ b/common_services/pid_cache_ear/src/test/resources/pubman.properties
@@ -10,5 +10,7 @@ escidoc.pid.service.view.path=/read/view
 escidoc.pid.service.delete.path=/write/delete
 escidoc.pid.service.update.path=/write/modify
 escidoc.pid.service.search.path=/read/search
-escidoc.pid.gwdg.user.login=demo2
-escidoc.pid.gwdg.user.password=Evaluierung
+escidoc.pid.gwdg.user.login=${escidoc.pid.gwdg.user.login}
+escidoc.pid.gwdg.user.password=${escidoc.pid.gwdg.user.password}
+escidoc.pidcache.user.name=${escidoc.pidcache.user.name}
+escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
