--- a/common_services/pid_cache_ear/pom.xml
+++ b/common_services/pid_cache_ear/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.41-SNAPSHOT</version>
+		<version>1.0.41</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>pid_cache_ear</artifactId>
 	<packaging>ear</packaging>
 	<name>pid_cache_ear</name>
-	<version>0.1.4-SNAPSHOT</version>
+	<version>0.1.4</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -221,14 +221,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>pid_cache_presentation</artifactId>
-			<version>0.1.4-SNAPSHOT</version>
+			<version>0.1.4</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.41-SNAPSHOT</version>
+			<version>1.1.41</version>
 			<type>ejb</type>
 			<scope>compile</scope>
 		</dependency>
