--- a/common_services/fao_ingestion/src/main/resources/ingestion.properties
+++ b/common_services/fao_ingestion/src/main/resources/ingestion.properties
@@ -1,12 +1,16 @@
 # FEDORA lowlevel data store
 fedora.data.dir=%FEDORA_HOME%/data
 
-# the base directory of the EIMS CDR export file(s)
+# the base directory of the EIMS CDR publications export file(s)
 eims.export.file.location = /home/frank/data/AGRIS_FAO/20090910-EIMSExport/final/
-# the file name(s) of the EIMS CDR export file(s) seperated by a single white space
+# the base directory of the EIMS CDR aeticles export file(s)
+eims.export.file.location.articles = /home/frank/data/AGRIS_FAO/20090910-EIMSExport/final/exportArticles/
+# the file name(s) of the EIMS CDR publications export file(s) seperated by a single white space
 # !!! the root element in all EIMS-CDR export files MUST BE changed to "eimsresources" !!!
 eims.export.file.names = eims_expmin99.xml eims_exp1999.xml eims_exp2000.xml eims_exp2001.xml eims_exp2002.xml eims_exp2003.xml eims_exp2004.xml eims_exp2005.xml eims_exp2006.xml eims_exp2007.xml eims_exp2008.xml eims_exp2009.xml eims_expnull.xml
-
+# the file name(s) of the EIMS CDR articles export file(s) seperated by a single white space
+# !!! the root element in all EIMS-CDR export files MUST BE changed to "eimsresources" !!!
+eims.export.file.names.articles = eims_Articles1.xml eims_Articles2.xml eims_Articles3.xml eims_Articles4.xml eims_Articles5.xml eims_Articles6.xml eims_Articles7.xml
 # the base directory of the FAODOC export file(s)
 faodoc.export.file.location = /home/frank/data/AGRIS_FAO/20090910-FaodocExport/updated_100126/
 # the file name(s) of the FAODOC export file(s) seperated by a single white space
@@ -28,5 +32,5 @@ fao.agrovoc.skos = file:///home/frank/data/AGRIS_FAO/URIs/ag_skos_080422.rdf
 # testing ...
 # faodoc.export.file.names = M-2.xml
 # the destination directory for the generated FOXML files
-fao.foxml.destination.location = /home/frank/data/AGRIS_FAO/FOXML/
+fao.foxml.destination.location = /home/frank/data/AGRIS_FAO/FOXML_articles/
 
