--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -222,3 +222,5 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
+
+escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
