Adaption to FW 1.2

--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -38,6 +38,8 @@ escidoc.pubman_presentation.email.withauthentication=
 escidoc.pubman_presentation.email.authenticationuser=
 escidoc.pubman_presentation.email.authenticationpwd=
 
+escidoc.pubman_presentation.viewFullItem.defaultSize=${escidoc.pubman_presentation.viewFullItem.defaultSize}
+
 # URL of this PubMan instance
 escidoc.pubman.instance.url=
 escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
@@ -48,8 +50,17 @@ escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
 escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 
+<!-- URL of the favicon-->
+escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
+escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
+
+<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
+
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=
+# URL of the escidoc-core instance you like to logon to
+escidoc.framework_access.login.url=
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -80,6 +91,9 @@ framework.admin.password=
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=
 
+# eSciDoc-ObjId of the root of the OU tree (used for edoc import)
+escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
+
 # COntrolled Named Entities database interface class
 escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
@@ -109,7 +123,6 @@ escidoc.cone.database.user.password=
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
-
 
 # Import database configuration
 escidoc.import.database.driver.class=${escidoc.import.database.driver.class}
@@ -152,3 +165,45 @@ escidoc.pubman.sitemap.retrieve.items=${escidoc.pubman.sitemap.retrieve.items}
 
 # Timeout period between framework retrievals (in seconds)
 escidoc.pubman.sitemap.retrieve.timeout=${escidoc.pubman.sitemap.retrieve.timeout}
+
+# File location of Max Mind's Geo IP City database file for statistics. If empty, the standard country database is used (no city detection)
+escidoc.statistics.max_mind_geo_lite_city_db.location=${escidoc.statistics.max_mind_geo_lite_city_db.location}
+
+#true if Ips should be stored in a truncated version (last three digits are removed) for the statistics, false if full IPs should be stored
+escidoc.statistics.shortenedIps=${escidoc.statistics.shortenedIps}
+
+#The given link will be displayed on the ViewItemStatistics Page as "Detailed Statistics" for the contexts given in the next property
+escidoc.pubman.statistics.nims.link=${escidoc.pubman.statistics.nims.link}
+
+#A list of comma-seperated context ids for which the "Detailed Statistics" link should be displayed.
+escidoc.pubman.statistics.nims.context.ids =${escidoc.pubman.statistics.nims.context.ids}
+
+escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
+escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
+
+<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
+
+escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
+                                                                    
+<!-- PID cache -->
+escidoc.pidcache.cache.size.max=${escidoc.pidcache.cache.size.max}
+escidoc.pidcache.refresh.interval=${escidoc.pidcache.refresh.interval}
+escidoc.pidcache.dummy.url=${escidoc.pidcache.dummy.url}
+escidoc.pid.gwdg.service.url=${escidoc.pid.gwdg.service.url}
+escidoc.pid.gwdg.timeout=${escidoc.pid.gwdg.timeout}
+escidoc.pid.pidcache.service.url=${escidoc.pid.pidcache.service.url}
+escidoc.pid.service.create.path=${escidoc.pid.service.create.path}
+escidoc.pid.service.view.path=${escidoc.pid.service.view.path}
+escidoc.pid.service.delete.path=${escidoc.pid.service.delete.path}
+escidoc.pid.service.update.path=${escidoc.pid.service.update.path}
+escidoc.pid.service.search.path=${escidoc.pid.service.search.path}
+escidoc.pid.gwdg.user.login=${escidoc.pid.gwdg.user.login}
+escidoc.pid.gwdg.user.password=${escidoc.pid.gwdg.user.password}
+escidoc.pidcache.user.name=${escidoc.pidcache.user.name}
+escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
+
+# MAB transformation property pointing to a directory where all fulltexts are stored.
+escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
+
+escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
