--- a/common_services/search_ear/pom.xml
+++ b/common_services/search_ear/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.42-SNAPSHOT</version>
+		<version>1.0.42</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>search_ear</artifactId>
 	<name>search_ear</name>
-	<version>1.0.41-SNAPSHOT</version>
+	<version>1.0.41</version>
 	<packaging>ear</packaging>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/search_ear</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/common_services/search_ear</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.42/search_ear</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/common_services-1.0.42/search_ear</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.42</url>
 	</scm>
 
 	<build>
@@ -296,14 +296,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.0.42-SNAPSHOT</version>
+			<version>1.0.42</version>
 			<type>ejb</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search_presentation</artifactId>
-			<version>1.0.41-SNAPSHOT</version>
+			<version>1.0.41</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
@@ -316,7 +316,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.42-SNAPSHOT</version>
+			<version>1.1.42</version>
 			<type>ejb</type>
 			<scope>compile</scope>
 		</dependency>
@@ -329,7 +329,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.45-SNAPSHOT</version>
+			<version>1.0.45</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
