Remove reference to the Test substantial test

--- a/common_services/citationmanager/src/test/resources/CitationStyles/Default/test.properties
+++ b/common_services/citationmanager/src/test/resources/CitationStyles/Default/test.properties
@@ -5,6 +5,6 @@ plain.test.xml=Default/DefaultTestCollection.xml
 substantial.skip.test=true
 substantial.ignore.multiply.spaces=true
 substantial.snippet.placeholder.xpath=//content-model-specific/bibliographicCitation
-substantial.test.xml=Test/TestCollection.xml
+substantial.test.xml=Default/DefaultTestCollection.xml
 substantial.expected.key=DEFAULT: 
 substantial.expected.xpath=//publication/abstract[contains(.,'DEFAULT: ')]
