Removed password placeholder

--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -130,7 +130,7 @@ escidoc.import.database.server.name=${escidoc.import.database.server.name}
 escidoc.import.database.server.port=${escidoc.import.database.server.port}
 escidoc.import.database.name=${escidoc.import.database.name}
 escidoc.import.database.user.name=${escidoc.import.database.user.name}
-escidoc.import.database.user.password=${escidoc.import.database.user.password}
+escidoc.import.database.user.password=
 escidoc.import.database.connection.url=${escidoc.import.database.connection.url}
 escidoc.import.task.content-model=${escidoc.import.task.content-model}
 
@@ -198,10 +198,10 @@ escidoc.pid.service.view.path=${escidoc.pid.service.view.path}
 escidoc.pid.service.delete.path=${escidoc.pid.service.delete.path}
 escidoc.pid.service.update.path=${escidoc.pid.service.update.path}
 escidoc.pid.service.search.path=${escidoc.pid.service.search.path}
-escidoc.pid.gwdg.user.login=${escidoc.pid.gwdg.user.login}
-escidoc.pid.gwdg.user.password=${escidoc.pid.gwdg.user.password}
-escidoc.pidcache.user.name=${escidoc.pidcache.user.name}
-escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
+escidoc.pid.gwdg.user.login=
+escidoc.pid.gwdg.user.password=
+escidoc.pidcache.user.name=
+escidoc.pidcache.user.password=
 
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
